# Doppel

./: .gitignore  Cargo.toml  DEVELOPMENT_PLAN.md  README.md  SECURITY.md  TESTING.md
.github/workflows/: ci.yml  release.yml
src/: auth.rs  community.rs  engine.rs  integration.rs  lib.rs  main.rs  models.rs  mutator.rs  ollama.rs  params.rs  reporting.rs  response_analysis.rs  verdict.rs
src/parameters/: classifier.rs  mod.rs  scanner.rs  substitution.rs
src/parsers/: bruno.rs  mod.rs  openapi.rs  postman.rs
tests/: openapi_security_tests.rs  parser_tests.rs  reporting_integration.rs  security_tests.rs  smart_detection_demo.rs  unit_tests.rs
