[package]
name = "Doppel"
version = "0.1.0"
edition = "2021"
authors = ["Jake Abendroth"]
description = "Automated BOLA/IDOR vulnerability scanner for APIs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "cookies", "blocking", "rustls-tls"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3"
regex = "1.7"
base64 = "0.21"

[dev-dependencies]
