[package]
name = "doppel"
version = "1.0.0"
edition = "2021"
authors = ["Jake Abendroth"]
description = "Automated BOLA/IDOR vulnerability scanner for APIs"

[dependencies]
clap = { version = "4.0", features = ["derive", "cargo"] }
reqwest = { version = "0.11", features = ["json", "cookies", "blocking", "rustls-tls"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3"
regex = "1.7"
base64 = "0.21"
chrono = "0.4"
lazy_static = "1.4"

[dev-dependencies]
